fix: resolve DSS Bonds regex bug and improve test coverage
- Fixed greedy regex in FileScanner to avoid misclassifying .ric.csv files.
- Refactored CsvFileParser for robust date extraction from filenames.
- Cleaned up unused imports and style issues.
- Added unit tests for SqlBuilder (DSS_BONDS), FileScanner (reject patterns), and CsvFileParser (edge cases).
- Added integration tests for bonds idempotency and sidecar file skipping.
- Updated documentation and task tracking.